--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div id="wrapper">
- main
       <u><h1>Welcome To Quiz</h1></u>
 
       <div id="quizDiv">
@@ -22,10 +21,15 @@
         </div>
         <button>Next Question</button>
       </div>
+     
       <div id="scoreDiv">
-        <h2></h2>
+        <h2>YOUR SCORE IS</h2>
       </div>
     </div>
+    <footer><p>&copy;Made by Saloni Pareek</p>
+      <p>copy right 2016</p>
+      <p>*Term and conditons</p>
+    </footer>
 
     <script src="quiz.js"></script>
   </body>
